deploy: 29005113fd5979d2ab9690da4a1915a73d1b73e3

--- a/index.html
+++ b/index.html
@@ -1,41 +1,1 @@
-<!DOCTYPE html><html lang="en"><head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0">
-  <script type="module">import init from '/lorem-web/lorem-91b33eb9a2130b01.js';init('/lorem-web/lorem-91b33eb9a2130b01_bg.wasm');</script>
-  <link rel="stylesheet" href="/lorem-web/main-fc5968d0dc42287.css">
-  
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/fontawesome.min.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/solid.min.css">
-  <title>Lorem</title>
-
-<link rel="preload" href="/lorem-web/lorem-91b33eb9a2130b01_bg.wasm" as="fetch" type="application/wasm" crossorigin="">
-<link rel="modulepreload" href="/lorem-web/lorem-91b33eb9a2130b01.js"></head>
-
-<body class="bg-gray-100 dark:bg-slate-800">
-  <!-- Start Single Page Apps for GitHub Pages -->
-  <script type="text/javascript">
-    // Single Page Apps for GitHub Pages
-    // MIT License
-    // https://github.com/rafgraph/spa-github-pages
-    // This script checks to see if a redirect is present in the query string,
-    // converts it back into the correct url and adds it to the
-    // browser's history using window.history.replaceState(...),
-    // which won't cause the browser to attempt to load the new url.
-    // When the single page app is loaded further down in this file,
-    // the correct url will be waiting in the browser's history for
-    // the single page app to route accordingly.
-    (function (l) {
-      if (l.search[1] === '/') {
-        var decoded = l.search.slice(1).split('&').map(function (s) {
-          return s.replace(/~and~/g, '&')
-        }).join('?');
-        window.history.replaceState(null, null,
-          l.pathname.slice(0, -1) + decoded + l.hash
-        );
-      }
-    }(window.location))
-  </script>
-  <!-- End Single Page Apps for GitHub Pages -->
-
-
-</body></html>
+<!doctype html><html lang=en><meta charset=UTF-8><meta content="width=device-width,initial-scale=1.0,minimum-scale=1.0" name=viewport><script type=module>import a,*as b from"/lorem-web/lorem-8c1a71ec1375233.js";a(`/lorem-web/lorem-8c1a71ec1375233_bg.wasm`);window.wasmBindings=b</script><link href=/lorem-web/main-a493ec0cfb0752c0.css integrity=sha384-CVJfh5cL6t7R7kOiSR2NdcjbOzgWp6SuIV8cyLBAbfapwG7Udm-98JWkrejv_Gsf rel=stylesheet><link href=https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/fontawesome.min.css rel=stylesheet><link href=https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/solid.min.css rel=stylesheet><title>Lorem</title><link as=fetch crossorigin href=/lorem-web/lorem-8c1a71ec1375233_bg.wasm integrity=sha384-4MlMOx0q1coAv2zu2dMGZ5pMbewo51ORSzoWfXWhzxrzNspJc72dmknOk6dB8A2F rel=preload type=application/wasm><link crossorigin href=/lorem-web/lorem-8c1a71ec1375233.js integrity=sha384-twO9RMwrJ_JlkEXUlShkuOgNOU16wKD8rk-jaSohYJ8vsl0WDEKUONOCNV11dRWw rel=modulepreload></head><body class="bg-gray-100 dark:bg-slate-800"><script>((a=>{let c=1,d=`&`,e=null;if(a.search[c]===`/`){var b=a.search.slice(c).split(d).map((a=>a.replace(/~and~/g,d))).join(`?`);window.history.replaceState(e,e,a.pathname.slice(0,-c)+ b+ a.hash)}})(window.location))</script></body></html>
